--- a/find-your-market/public/index.html
+++ b/find-your-market/public/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +6,6 @@
     <title>Find Your Market</title>
   </head>
   <body>
-    <div id="root"></div> <!-- React will render into this element -->
+    <div id="root"></div> 
   </body>
 </html>
